--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.13",
+    "next-seo": "^6.6.0",
     "nouislider": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
