--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@napi-rs/canvas": "^0.1.62",
     "@react-three/drei": "^9.114.5",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
+    "canvas": "^2.11.2",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.13",
